--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
                      
                     </ul>
                   </li>
-                  <li><a href="projects_UIUX.html">介面ＵＩＵＸ</a></li>
-                  <li><a href="projects_WEB.html">網站ＷＥＢ</a></li>
-                  <li><a href="projects_Graphic.html">視覺ＧＲＡＰＨＩＣ</a></li>
+                  <li><a href="projects_UIUX.html">作品PORTFILIO</a></li>
+                  
                 </ul>
             </div><!-- /.navbar-collapse -->
       	</div><!-- /.container -->
