--- a/projects.html
+++ b/projects.html
@@ -102,6 +102,16 @@
 				<div class="portfolio_items">
 
 					<!--artwork-->
+
+						<!--artwork-->
+    				<div class="portfolio_item artwork2">
+      					<div class="pos_rel">
+      						<div>
+								<a href="projects_UIUX-4.html" target="_self"><img src="images/project/small/UIUX-4.jpg"  alt="portfolio Image" class="img-responsive" /></a>
+							</div>
+     					</div>
+					</div>
+
 					<div class="portfolio_item artwork1">
 						<div class="pos_rel">
 		  					<img src="images/project/small/2-1.jpg" alt="portfolio Image" class="img-responsive">
@@ -294,6 +304,34 @@
       						</div>
     					</div>
     				</div>
+
+    				<!--artwork-->
+       				<div class="portfolio_item artwork1" >
+						<div class="pos_rel">
+		  					<img src="images/project/small/2-35.jpg" alt="portfolio Image" class="img-responsive">
+		  					<div class="overlay"></div>
+		  					<div class="port_caption">
+								<a href="images/project/big/2-35.jpg" class="image-icon" data-rel="lightcase:myCollection"  title="Project"><i class="fa fa-search" aria-hidden="true"></i></a>
+								<h4>Graphic Design Project</h4>
+								<p>POSTER</p>
+		  					</div>
+						</div>
+	  				</div>
+
+	  				<!--artwork-->
+       				<div class="portfolio_item artwork1" >
+						<div class="pos_rel">
+		  					<img src="images/project/small/2-36.jpg" alt="portfolio Image" class="img-responsive">
+		  					<div class="overlay"></div>
+		  					<div class="port_caption">
+								<a href="images/project/big/2-36.jpg" class="image-icon" data-rel="lightcase:myCollection"  title="Project"><i class="fa fa-search" aria-hidden="true"></i></a>
+								<h4>Graphic Design Project</h4>
+								<p>POSTER</p>
+		  					</div>
+						</div>
+	  				</div>
+      			
+      			
 
     				<!--artwork-->
 					<div class="portfolio_item artwork2">
@@ -1075,6 +1113,17 @@
 						</div>
 					</div>
 				</div>
+
+
+					<!--artwork-->
+	      		<div class="portfolio_item artwork8" >
+					<div class="pos_rel">
+						<div>
+		  					<video width="530px" hight="700px" src="images/project/Promote cf.mp4" controls class="img-responsive">
+							</video>
+						</div>
+					</div>
+				</div>
 	
 
 				</div><!-- portfolio item -->
@@ -1088,7 +1137,7 @@
     				<a class="page-scroll scroll-top" href="#projects"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
 				</div><!-- row -->
      			<div class="row" style="font-family: arial, Microsoft JhengHei;">
-     				<center>Copyright © 2020 KNOCK Design Studio. All rights reserved</center>
+     				<center>Copyright © 2022 FION_CHIOU. All rights reserved</center>
     			</div>
   			</div><!-- container -->
 		</footer>
