--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		  		<div class="service-item">
 					<span><i class="glyphicon glyphicon-magnet" aria-hidden="true"></i></span>
 					<h5>UIUX Design <br>UIUX人機界面設計</h5><hr> 
-                    <p style="font-size:1.1em;"><b>TOOLS:</b><br> Sketch / invision / Prott / Zeplin </p>
+                    <p style="font-size:1.1em;"><b>TOOLS:</b><br> Figma / Sketch / invision / Prott / Zeplin </p>
                     <p style="font-size:1.1em; "><b>系統</b><br> ＲＷＤ / iOS / Android </p>
                     
                     
