--- a/projects_WEB-1.html
+++ b/projects_WEB-1.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-<title>FION CHIOU PORTFILIO</title>
+<title>FION CHIOU PORTFOLIO</title>
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i%7CPoppins:300,400,500,600,700" rel="stylesheet">
@@ -135,7 +135,7 @@
 	</div><!-- row -->
     
     <div class="row" style="font-family: arial, Microsoft JhengHei;">
-         <center>Copyright © 2022 FION_CHIOU. All rights reserved</center>
+         <center>Copyright © 2024 FION_CHIOU. All rights reserved</center>
     </div>
   </div><!-- container -->
 </footer>
