--- a/projects.html
+++ b/projects.html
@@ -335,7 +335,7 @@
 	  				<div class="portfolio_item artwork3" >
       					<div class="pos_rel">
       						<div >
-       							<a href="https://fionchiuweb.000webhostapp.com/FION_ArtworkWeb03/index.html" target="_blank"><img src="images/project/small/4-9.jpg"  alt="portfolio Image" class="img-responsive" ></a>
+       							<a href="https://luckyfion0202.github.io/MusicCompetition/index.html" target="_blank"><img src="images/project/small/4-9.jpg"  alt="portfolio Image" class="img-responsive" ></a>
      						</div>
       					</div>
     				</div>
@@ -344,7 +344,7 @@
     				<div class="portfolio_item artwork3" >
       					<div class="pos_rel">
       						<div>
-								<a href="https://fionchiuweb.000webhostapp.com/FION_ArtworkWeb01/loto.html" target="_blank"><img src="images/project/small/4-8.jpg"  alt="portfolio Image" class="img-responsive" ></a>
+								<a href="https://luckyfion0202.github.io/Lottery-page/loto.html" target="_blank"><img src="images/project/small/4-8.jpg"  alt="portfolio Image" class="img-responsive" ></a>
 							</div>
      					</div>
       				</div>
@@ -353,7 +353,7 @@
       				<div class="portfolio_item artwork3" >
       					<div class="pos_rel">
       						<div>
-       							<a href="https://fionchiuweb.000webhostapp.com/FION_ArtworkWeb02/index.html" target="_blank"><img src="images/project/small/4-1.jpg"  alt="portfolio Image" class="img-responsive" ></a>
+       							<a href="https://luckyfion0202.github.io/hoshinwebsite/index.html" target="_blank"><img src="images/project/small/4-1.jpg"  alt="portfolio Image" class="img-responsive" ></a>
        						</div>
      					</div>
     				</div>
