--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                      
                     </ul>
                   </li>
-                  <li><a href="projects.html">作品PORTFILIO</a></li>
+                  <li><a href="projects.html">作品PORTFOLIO</a></li>
                   
                 </ul>
             </div><!-- /.navbar-collapse -->
