--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
                       				<li><a class="page-scroll" href="index.html#experience">學經歷 ＥＸＰＥＲＩＥＮＣＥ</a></li>
                      			</ul>
                   			</li>
-                  			<li><a href="projects.html">作品PORTFILIO</a></li>
+                  			<li><a href="projects.html">作品PORTFOLIO</a></li>
 	                  	</ul>
             		</div> <!-- /.navbar-collapse -->
       			</div><!-- /.container -->
@@ -83,7 +83,7 @@
 		<section id="projects" class="portfolio padding-120 bg-color">
 			<div class="container-fluid2">
 				<div class="section-header text-center">
-	  				<h3 style="margin:0">Portfilio</h3>
+	  				<h3 style="margin:0">PORTFOLIO</h3>
 	  				<p style="color:#F7B446; padding:10px ;font-size:18px; ">請點選UIUX 與 網頁作品圖片，看更詳細的作品介紹 </p>
 				</div>
 
