--- a/projects_WEB-3.html
+++ b/projects_WEB-3.html
@@ -81,7 +81,7 @@
                      
                     </ul>
                   </li>
-                  <li><a href="projects.html">作品PORTFILIO</a></li>
+                  <li><a href="projects.html">作品PORTFOLIO</a></li>
                   
                 </ul>
             </div><!-- /.navbar-collapse -->
@@ -94,7 +94,7 @@
 	<div class="container">
 
     <div>
-      <p style="font-size: 16px; margin: 0 0 0.1em 0; color:#727171; text-align: left"><a style="color:#38b0c3" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a><span>＞</span><a style="color:#38b0c3" href="projects.html">作品PORTFILIO</a><span>＞EDM設計＋切版</span></p>
+      <p style="font-size: 16px; margin: 0 0 0.1em 0; color:#727171; text-align: left"><a style="color:#38b0c3" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a><span>＞</span><a style="color:#38b0c3" href="projects.html">作品PORTFOLIO</a><span>＞EDM設計＋切版</span></p>
     </div>
 
     <button style="font-size: 16px; margin: 10px 10px 30px 10px ;  background-color: #f4a000; float:right; border-radius: 20px;"><a style="color:white" href="https://www.sun.net.tw/epaper/180323_cl/" target="_blank">點我連結網站</a></button>
