--- a/projects_UIUX-3.html
+++ b/projects_UIUX-3.html
@@ -74,7 +74,7 @@
                      
                     </ul>
                   </li>
-                  <li><a href="projects.html">作品PORTFILIO</a></li>
+                  <li><a href="projects.html">作品PORTFOLIO</a></li>
                   
                 </ul>
             </div><!-- /.navbar-collapse -->
@@ -86,7 +86,7 @@
     <section id="projects" class="portfolio padding-120 ">
 	     <div class="container">
           <div>
-            <p style="font-size: 16px; margin: 0 0 0.1em 0; color:#727171; text-align: left"><a style="color:#38b0c3" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a><span>＞</span><a style="color:#38b0c3" href="projects.html">作品PORTFILIO</a><span>＞VEHICLE LEASING TRIAL CALCULATION SYSTEM</span></p>
+            <p style="font-size: 16px; margin: 0 0 0.1em 0; color:#727171; text-align: left"><a style="color:#38b0c3" href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a><span>＞</span><a style="color:#38b0c3" href="projects.html">作品PORTFOLIO</a><span>＞VEHICLE LEASING TRIAL CALCULATION SYSTEM</span></p>
             <p style="font-size: 16px; margin: 0 0 0.1em 0; color:#727171; text-align: right" >UI enhancementg</p>
             <p style="font-size: 16px; margin: 0 0 0.1em 0; color:#727171; text-align: right" >ＲＷＤ (Mobile / Desktop)</p>
           </div>
